--- a/templates/follow.html
+++ b/templates/follow.html
@@ -6,17 +6,17 @@
 
     <div class="container">
 
-        {% include "menu.html" with index=True %}
+        {% include "menu.html" with follow=True %}
 
         <h1> Мои подписки </h1>
         {% for post in page %}
         {% include "post_item.html" with post=post %}
         {% endfor %}
-    </div>
+    
         {% if page.has_other_pages %}
             {% include "paginator.html" with items=page paginator=paginator%}
         {% endif %}
-
+</div>
 {% endblock %}
 
 
