--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,12 +1,12 @@
 {% if user.is_authenticated %} 
-<div class="row">
+
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link {% if index %}active{% endif %}" href="/">Все авторы</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link {% if follow %}active{% endif %}" href="/follow">Избранные авторы</a>
+            <a class="nav-link {% if follow %}active{% endif %}" href="/follow/">Подписки</a>
         </li>
     </ul>
-</div>
+
 {% endif %}
