--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="/"><span style="color:red">Ya</span>tube</a>
+    
     <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-3" href="https://yandex.ru/doma">#ЛучшеДома</a>
         {% if user.is_authenticated %}
         Пользователь: {{ user.username }}.
         <a class="p-3 text-dark" href="{% url 'new_post' %}">Новый пост</a>
