--- a/templates/post_item.html
+++ b/templates/post_item.html
@@ -23,8 +23,8 @@
                 <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group ">
                                 <a class="btn btn-sm text-muted" href="{% url 'post' post.author.username post.id %}" role="button">
-                                        {% if post.comment.count %}
-                                        {{ post.comment.count }} {{ post.comment.count|rupluralize:"комментарий,комментария,комментариев"  }}
+                                        {% if post.comments.count %}
+                                        {{ post.comments.count }} {{ post.comments.count|rupluralize:"комментарий,комментария,комментариев"  }}
                                         {% else%}
                                         Добавить комментарий
                                         {% endif %}
@@ -36,7 +36,10 @@
                                         role="button">
                                         Редактировать
                                 </a>
-                            
+                                <a class="btn btn-sm text-muted" href="{% url 'post_delete' post.author.username post.id %}"
+                                        role="button">
+                                        Удалить
+                                </a>
                                 {% endif %}
                         </div>
 
